--- a/src/main/webapp/PalmResort/html/find_id.html
+++ b/src/main/webapp/PalmResort/html/find_id.html
@@ -49,8 +49,8 @@
 					<form >
 						<div class="text"><i class="fa-solid fa-check"></i> 등록된 회원정보로 아이디를 찾아 드립니다.</div>
 						<div class="mb-3">
-							<label class="mb-2">아이디 </label>
-							<input type="text" class="form-control fs-13px" placeholder="아이디" />
+							<label class="mb-2">이름 </label>
+							<input type="text" class="form-control fs-13px" placeholder="이름" />
 						</div>						
 						<div class="mb-3">
 							<label class="mb-2">전화번호</label>
