--- a/src/main/webapp/PalmResort/html/layout.html
+++ b/src/main/webapp/PalmResort/html/layout.html
@@ -23,7 +23,7 @@
 				<button type="button" class="navbar-mobile-toggler btn-pre" >
 					<i class="fas fa-angle-left"></i>
 				</button>
-				<h1>회원가입</h1>
+				<h1>Title</h1>
 				<!-- <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span> <b class="me-3px">Color</b> Admin</a> -->
 				<button type="button" class="navbar-mobile-toggler" data-toggle="app-sidebar-mobile">
 					<span class="icon-bar"></span>
