--- a/src/main/webapp/PalmResort/html/layout.html
+++ b/src/main/webapp/PalmResort/html/layout.html
@@ -130,29 +130,7 @@
 				<div class="panel panel-inverse">
 					<div class="panel-body">
 						<p>
-							Add the <code>.app-content-full-height</code> css class to <code>.app</code> container for full height page element. 
-							<br />
-							<b>If</b> you only need the footer to be fixed at the bottom for <b>minimum max page height</b>, you are not required to add the <code>data-scrollbar="true"</code> and <code>data-height="100%"</code>;
-						</p>
-						<p>
-							Add the <code>.app-content-full-height</code> css class to <code>.app</code> container for full height page element. 
-							<br />
-							<b>If</b> you only need the footer to be fixed at the bottom for <b>minimum max page height</b>, you are not required to add the <code>data-scrollbar="true"</code> and <code>data-height="100%"</code>;
-						</p>
-						<p>
-							Add the <code>.app-content-full-height</code> css class to <code>.app</code> container for full height page element. 
-							<br />
-							<b>If</b> you only need the footer to be fixed at the bottom for <b>minimum max page height</b>, you are not required to add the <code>data-scrollbar="true"</code> and <code>data-height="100%"</code>;
-						</p>
-						<p>
-							Add the <code>.app-content-full-height</code> css class to <code>.app</code> container for full height page element. 
-							<br />
-							<b>If</b> you only need the footer to be fixed at the bottom for <b>minimum max page height</b>, you are not required to add the <code>data-scrollbar="true"</code> and <code>data-height="100%"</code>;
-						</p>
-						<p>
-							Add the <code>.app-content-full-height</code> css class to <code>.app</code> container for full height page element. 
-							<br />
-							<b>If</b> you only need the footer to be fixed at the bottom for <b>minimum max page height</b>, you are not required to add the <code>data-scrollbar="true"</code> and <code>data-height="100%"</code>;
+							Contents AREA
 						</p>
 					</div>
 				</div>
