예약리스트형 UI 수정

--- a/src/main/webapp/PalmResort/html/reserve_list.html
+++ b/src/main/webapp/PalmResort/html/reserve_list.html
@@ -132,35 +132,35 @@
 						<ul class="reserve-list">
 							<li class="active">
 								<a href="">
-									<span>2023-11-22 13:12:00</span>
+									<span class="date">2023-11-22 13:12:00</span>
 									<span>예약요청</span>
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
 							</li>
 							<li>
 								<a href="">
-									<span>2023-11-21 13:12:00</span>
+									<span class="date">2023-11-21 13:12:00</span>
 									<span>예약확정</span>
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
 							</li>
 							<li>
 								<a href="">
-									<span>2034-11-22 13:12:00</span>
+									<span class="date">2034-11-22 13:12:00</span>
 									<span>예약요청</span>
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
 							</li>
 							<li>
 								<a href="">
-									<span>2034-11-22 13:12:00</span>
+									<span class="date">2034-11-22 13:12:00</span>
 									<span>예약취소</span>
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
 							</li>
 							<li>
 								<a href="">
-									<span>2034-11-22 13:12:00</span>
+									<span class="date">2034-11-22 13:12:00</span>
 									<span>예약요청</span>
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
