상품 소개 테이블 수정

--- a/src/main/webapp/PalmResort/html/info_package.html
+++ b/src/main/webapp/PalmResort/html/info_package.html
@@ -147,6 +147,7 @@
 				<div class="tab-content panel rounded-0 p-3 m-0">
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade active show" id="default-tab-1">
+						<!-- th 두개 -->
 						<table class="table table-striped">
 							<colgroup>
 								<col style="width:50%">
@@ -182,10 +183,47 @@
 								</tr>
 							</tbody>
 						</table>
+						<!-- th 한개 -->
+						<table class="table table-striped">
+							<colgroup>
+								<col style="width:50%">
+								<col style="width:50%">
+							</colgroup>
+							<thead>
+								<tr class="table-success">
+									<th colspan="2"><span>2023년 11월30일~2024년12월30일</span></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td colspan="2"><span>주중 36홀, 주말오후 18홀</span></td>
+								</tr>
+								<tr>
+									<td><span>140,000원/1인/1일</span></td>
+									<td><span>145,000원/1인/1실</span></td>
+								</tr>
+								<tr>
+									<td colspan="2"><span>주중 27홀, 주말오후 18홀</span></td>
+								</tr>
+								<tr>
+									<td><span>135,000원/1인/1일</span></td>
+									<td><span>140,000원/1인/1실</span></td>
+								</tr>
+								<tr>
+									<td colspan="2"><span>마사지</span></td>
+								</tr>
+								<tr>
+									<td><span>USD35/1시간</span></td>
+									<td><span>USD35/1시간</span></td>
+								</tr>
+							</tbody>
+						</table>					
+					
 					</div>
 					<!-- END tab-pane -->
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade" id="default-tab-2">
+						<!-- th 세개 -->
 						<table class="table table-striped">
 							<colgroup>
 								<col style="width:50%">
