--- a/src/main/webapp/PalmResort/html/set_personal.html
+++ b/src/main/webapp/PalmResort/html/set_personal.html
@@ -57,11 +57,11 @@
 						</div>
 						<div class="mb-3">
 							<label class="mb-2">기존 비밀번호 </label>
-							<input type="password" class="form-control fs-13px" placeholder="비밀번호" />
+							<input type="password" class="form-control fs-13px" placeholder="기존 비밀번호" />
 						</div>
 						<div class="mb-3">
 							<label class="mb-2">신규 비밀번호 </label>
-							<input type="password" class="form-control fs-13px" placeholder="비밀번호" />
+							<input type="password" class="form-control fs-13px" placeholder="신규 비밀번호" />
 						</div>
 						<div class="mb-2">
 							<label class="mb-2">비밀번호 확인</label>
