--- a/src/main/webapp/PalmResort/html/main_btn.html
+++ b/src/main/webapp/PalmResort/html/main_btn.html
@@ -29,11 +29,15 @@
 				<p>Palm Resort</p>
 			</div>
 			<div class="main-btn-wrap">
-				<a href="#" class="btn btn-success"><i class="fas fa-calendar-check"></i>예약요청</a>
-				<a href="#" class="btn btn-success"><i class="fas fa-calendar-days"></i>예약현황</a>
-				<a href="#" class="btn btn-success"><i class="fas fa-pencil-alt"></i>문의사항</a>
-				<a href="#" class="btn btn-success"><i class="far fa-message"></i>공지사항</a>
+				<div class="goto-menu">				
+					<a href="#" class="btn btn-success"><i class="fas fa-calendar-check"></i>예약요청</a>
+					<a href="#" class="btn btn-success"><i class="fas fa-calendar-days"></i>예약현황</a>
+					<a href="#" class="btn btn-success"><i class="fas fa-pencil-alt"></i>문의사항</a>
+					<a href="#" class="btn btn-success"><i class="far fa-message"></i>공지사항</a>
+				</div>
+				<a href="#" class="btn btn-dark btn-sm btn-set">설정</a>
 			</div>
+			
 			<!-- END content-container -->
 			
 			<!-- BEGIN #footer -->
