패키지 테이블 수정

--- a/src/main/webapp/PalmResort/html/info_package.html
+++ b/src/main/webapp/PalmResort/html/info_package.html
@@ -148,7 +148,7 @@
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade active show" id="default-tab-1">
 						<!-- th 두개 -->
-						<table class="table table-striped">
+						<table class="table table-pk">
 							<colgroup>
 								<col style="width:50%">
 								<col style="width:50%">
@@ -163,28 +163,28 @@
 								<tr>
 									<td colspan="2"><span>주중 36홀, 주말오후 18홀</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>140,000원/1인/1일</span></td>
 									<td><span>145,000원/1인/1실</span></td>
 								</tr>
 								<tr>
 									<td colspan="2"><span>주중 27홀, 주말오후 18홀</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>135,000원/1인/1일</span></td>
 									<td><span>140,000원/1인/1실</span></td>
 								</tr>
 								<tr>
 									<td colspan="2"><span>마사지</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>USD35/1시간</span></td>
 									<td><span>USD35/1시간</span></td>
 								</tr>
 							</tbody>
 						</table>
 						<!-- th 한개 -->
-						<table class="table table-striped">
+						<table class="table table-pk">
 							<colgroup>
 								<col style="width:50%">
 								<col style="width:50%">
@@ -198,21 +198,21 @@
 								<tr>
 									<td colspan="2"><span>주중 36홀, 주말오후 18홀</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>140,000원/1인/1일</span></td>
 									<td><span>145,000원/1인/1실</span></td>
 								</tr>
 								<tr>
 									<td colspan="2"><span>주중 27홀, 주말오후 18홀</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>135,000원/1인/1일</span></td>
 									<td><span>140,000원/1인/1실</span></td>
 								</tr>
 								<tr>
 									<td colspan="2"><span>마사지</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>USD35/1시간</span></td>
 									<td><span>USD35/1시간</span></td>
 								</tr>
@@ -224,7 +224,7 @@
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade" id="default-tab-2">
 						<!-- th 세개 -->
-						<table class="table table-striped">
+						<table class="table table-pk">
 							<colgroup>
 								<col style="width:50%">
 								<col style="width:50%">
@@ -242,16 +242,26 @@
 								<tr>
 									<td colspan="2"><span>주중36홀,주말오후18홀 <br>10일미만체류, 투어리즘텍스 포함</span></td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>140,000원/1인/1일</span></td>
 									<td><span>145,000원/1인/1실</span></td>
 								</tr>
 								<tr>
 									<td colspan="2">주중27홀, 주말오후18홀 <br>10일 이상체류, 투어리즘텍스 포함</td>
 								</tr>
-								<tr>
+								<tr class="bg">
 									<td><span>135,000원/1인/1일</span></td>
 									<td><span>140,000원/1인/1실</span></td>
+								</tr>
+								<tr>
+									<td colspan="2">마사지</td>
+								</tr>
+								<tr class="bg">
+									<td><span>135,000원/1인/1일</span></td>
+									<td rowspan="2"><span>140,000원/1인/1실</span></td>
+								</tr>
+								<tr class="bg">
+									<td><span>135,000원/1인/1일</span></td>
 								</tr>
 							</tbody>
 						</table>
