문의사항 list 수정

--- a/src/main/webapp/PalmResort/html/board_qna_list.html
+++ b/src/main/webapp/PalmResort/html/board_qna_list.html
@@ -125,7 +125,10 @@
 		<div id="content" class="app-content d-flex flex-column p-0">
 			<!-- BEGIN content-container -->
 			<div class="app-content-padding flex-grow-1 overflow-hidden" data-scrollbar="true" data-height="100%">
-
+				
+				<!-- BEGIN write btn -->
+				<a href="#" class="btn btn-success btn-icon btn-lg btn-write"><i class="fas fa-plus"></i></a>
+				<!-- END write btn -->
 				<!-- BEGIN nav-tabs -->
 				<ul class="nav nav-tabs">
 					<li class="nav-item">
