--- a/src/main/webapp/PalmResort/html/info_resort.html
+++ b/src/main/webapp/PalmResort/html/info_resort.html
@@ -176,18 +176,53 @@
 								<li><img src="../assets/img/hotel_p06.jpg" ></li>
 							</ul>
 						</div>
-
+						<div class="type-room">
+							<div class="pic-tit">호텔 로비 및 바, 수영장</div>
+							<ul class="room-list">
+								<li><img src="../assets/img/hotel_etc01.png" ></li>
+								<li><img src="../assets/img/hotel_etc02.png" ></li>
+								<li><img src="../assets/img/hotel_etc03.png" ></li>
+							</ul>
+						</div>
+						<div class="type-room">
+							<div class="pic-tit">호텔 내 레스토랑 </div>
+							<ul class="room-list">
+								<li><img src="../assets/img/hotel_etc04.png" ></li>
+								<li><img src="../assets/img/hotel_etc05.png" ></li>
+							</ul>
+						</div>
 					</div>
 					<!-- END tab-pane -->
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade" id="default-tab-2">
 						<div class="type-room">
+							<div class="pic-tit">골프장 코스</div>
 							<ul class="room-list">
-								<li><img src="../assets/img/golf01.jpg" ></li>
 								<li><img src="../assets/img/golf02.jpg" ></li>
+								<li><img src="../assets/img/golf06.png" ></li>
+								<li><img src="../assets/img/golf01.jpg" ></li>
 								<li><img src="../assets/img/golf03.jpg" ></li>
 								<li><img src="../assets/img/golf04.jpg" ></li>
 								<li><img src="../assets/img/golf05.png" ></li>
+							</ul>
+						</div>
+						<div class="type-room">
+							<div class="pic-tit">골프장 한국 식당 '연'</div>
+							<ul class="room-list">
+								<li><img src="../assets/img/golf_etc01.png" ></li>
+								<li><img src="../assets/img/golf_etc02.png" ></li>
+								<li><img src="../assets/img/golf_etc03.png" ></li>
+								<li><img src="../assets/img/golf_etc04.png" ></li>
+								<li><img src="../assets/img/golf_etc05.png" ></li>
+							</ul>
+						</div>
+						<div class="type-room">
+							<div class="pic-tit">골프장 기타 부대시설</div>
+							<ul class="room-list">
+								<li><img src="../assets/img/golf_etc06.png" ></li>
+								<li><img src="../assets/img/golf_etc07.png" ></li>
+								<li><img src="../assets/img/golf_etc08.png" ></li>
+								<li><img src="../assets/img/golf_etc09.png" ></li>
 							</ul>
 						</div>
 					</div>
