--- a/src/main/webapp/PalmResort/html/info_resort.html
+++ b/src/main/webapp/PalmResort/html/info_resort.html
@@ -196,10 +196,15 @@
 					<!-- BEGIN tab-pane -->
 					<div class="tab-pane fade" id="default-tab-2">
 						<div class="type-room">
-							<div class="pic-tit">골프장 코스</div>
+							<div class="pic-tit">골프장 클럽하우스</div>
 							<ul class="room-list">
 								<li><img src="../assets/img/golf02.jpg" ></li>
 								<li><img src="../assets/img/golf06.png" ></li>
+							</ul>
+						</div>
+						<div class="type-room">
+							<div class="pic-tit">골프장 코스</div>
+							<ul class="room-list">
 								<li><img src="../assets/img/golf01.jpg" ></li>
 								<li><img src="../assets/img/golf03.jpg" ></li>
 								<li><img src="../assets/img/golf04.jpg" ></li>
