--- a/src/main/webapp/PalmResort/html/reserve_list.html
+++ b/src/main/webapp/PalmResort/html/reserve_list.html
@@ -165,6 +165,9 @@
 									<span><i class="fa fa-angle-right fa-lg"></i></span>
 								</a>
 							</li>
+							<li class="none">
+								<a href="javascript:void(0)"><i class="fa fa-times"></i>예약내역이 없습니다.</a>
+							</li>
 						</ul>
 					</div>
 				</div>
